Fixed weird spacing issues around post headers

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -289,7 +289,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  padding: 20px 40px 0px 40px;
+  padding: 0.5em 2em 0em 2em;
   align-items: start;
 }
 
@@ -329,7 +329,7 @@
   .post-header-container {
     grid-template-columns: 1fr;
     text-align: left;
-    padding: 20px 20px 0px 20px;
+    padding: 20px;
   }
   
   .post-header-content {
